# machine-learning-project-template

./: cookiecutter.json
{{cookiecutter.repository_name}}/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  {{cookiecutter.project_name}}_machine_image.pkr.hcl
{{cookiecutter.repository_name}}/.github/workflows/: ci.yaml
{{cookiecutter.repository_name}}/docker/: Dockerfile
{{cookiecutter.repository_name}}/scripts/vm_startup/: training_startup_script.sh  {{cookiecutter.project_name}}_gcp_image_creation_startup_script.sh
{{cookiecutter.repository_name}}/tests/: conftest.py  test_dummy.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/: evaluate.py  generate_final_config.py  train.py  train_remote.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/config_schemas/: config_schema.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/config_schemas/infrastructure/: infrastructure_schema.py  job_info_schema.py  vm_config_schema.py
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/configs/: README.md  config.yaml
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/configs/hydra/job_logging/: custom.yaml
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/configs/infrastructure/vm_config/: default.yaml
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/configs/infrastructure/vm_config/machine/: a100_x1.yaml  a100_x2.yaml  a100_x4.yaml  a100_x8.yaml  t4_x1.yaml  v100_x1.yaml  v100_x2.yaml
{{cookiecutter.repository_name}}/{{cookiecutter.project_name}}/utils/: config_utils.py  gcp_training_launcher.py  gcp_utils.py  io_utils.py  mixins.py  schema_utils.py  utils.py
